--- a/en/0.html
+++ b/en/0.html
@@ -1,20 +1,20 @@
 <div class="row">
     <div class="col-md-12">
         <div class="main-title">
-            <h6>البنوك و القطاع المصرفي</h6>
+            <h6>مهارات التواصل و الكتابة</h6>
         </div>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/241.pdf" class="video-card">
+        <a href="img/files/ar/1271.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/1.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/1.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">ورشة عمل التحليل المالي</p>
+                    <p class="text-dark font-bold text-center">مهارات الكتابة المهنية</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/241.pdf" class="mr-2">
+                    <a href="img/files/ar/1271.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -25,16 +25,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/240.pdf" class="video-card">
+        <a href="img/files/ar/1270.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/2.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/2.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">معايير بازل 3، تقييم المخاطر واختبار التحمل</p>
+                    <p class="text-dark font-bold text-center">مهارات الكتابة المهنية المتقدمة</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/240.pdf" class="mr-2">
+                    <a href="img/files/ar/1270.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -45,17 +45,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/239.pdf" class="video-card">
+        <a href="img/files/ar/1269.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/3.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/3.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">النقد الأجنبي وأسواق المال والمشتقات المالية
-                    </p>
+                    <p class="text-dark font-bold text-center">مهارات الصياغة والكتابة القانونية</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/239.pdf" class="mr-2">
+                    <a href="img/files/ar/1269.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -66,16 +65,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/238.pdf" class="video-card">
+        <a href="img/files/ar/1268.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/4.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/4.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">التحليل المالي المتقدم</p>
+                    <p class="text-dark font-bold text-center">مهارات التواصل مع الآخرين</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/238.pdf" class="mr-2">
+                    <a href="img/files/ar/1268.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -86,16 +85,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/237.pdf" class="video-card">
+        <a href="img/files/ar/1267.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/5.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/5.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">التأمينات الاجتماعية و إدارة المخاطر</p>
+                    <p class="text-dark font-bold text-center">مهارات التواصل عند الأزمات</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/237.pdf" class="mr-2">
+                    <a href="img/files/ar/1267.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -106,17 +105,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/236.pdf" class="video-card">
+        <a href="img/files/ar/1266.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/6.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/6.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">أسس التحقيق المالي و كشف ملابسات الإحتيال و
-                        الإختلاس</p>
+                    <p class="text-dark font-bold text-center">كتابة التقارير للمدقق الداخلي</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/236.pdf" class="mr-2">
+                    <a href="img/files/ar/1266.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -127,16 +125,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/235.pdf" class="video-card">
+        <a href="img/files/ar/1265.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/7.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/7.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">إدارة ونمذجة وتقييم مخاطر الائتمان</p>
+                    <p class="text-dark font-bold text-center">قوة التأثير في إدارة النزاعات</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/235.pdf" class="mr-2">
+                    <a href="img/files/ar/1265.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -147,16 +145,17 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/234.pdf" class="video-card">
+        <a href="img/files/ar/1264.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/8.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/8.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">إدارة محافظ الأسهم</p>
+                    <p class="text-dark font-bold text-center">شهادة مؤسسة توليس في مهارات اللغة الإنجليزية
+                        القانونية</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/234.pdf" class="mr-2">
+                    <a href="img/files/ar/1264.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -167,16 +166,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/233.pdf" class="video-card">
+        <a href="img/files/ar/1263.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/9.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/9.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">إدارة فرق التحصيل ومراقبة الائتمان</p>
+                    <p class="text-dark font-bold text-center">شهادة في المهارات الفنية للكتابة المهنية</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/233.pdf" class="mr-2">
+                    <a href="img/files/ar/1263.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -187,16 +186,16 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/232.pdf" class="video-card">
+        <a href="img/files/ar/1262.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/10.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/10.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">اتقان أساسيات الصناعة المالية العالمية</p>
+                    <p class="text-dark font-bold text-center">شهادة في التواصل المؤسسي</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/232.pdf" class="mr-2">
+                    <a href="img/files/ar/1262.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
@@ -207,16 +206,76 @@
         </a>
     </div>
     <div class="col-xl-3 col-sm-6 mb-3">
-        <a href="img/files/ar/231.pdf" class="video-card">
+        <a href="img/files/ar/1261.pdf" class="video-card">
             <div class="video-card-image">
-                <img class="img-fluid" src="/assets/images/course-images/banking-and-insurance/11.jpg" alt="">
+                <img class="img-fluid" src="/assets/images/course-images/communication/11.jpg" alt="">
             </div>
             <div class="video-card-body video-card-body--inner">
                 <div class="video-title">
-                    <p class="text-dark font-bold text-center">‏ ‏ إدارة المحافظ الإستثمارية</p>
+                    <p class="text-dark font-bold text-center">تقنيات كتابة التقارير الفعالة</p>
                 </div>
                 <div class="d-flex justify-content-between mt-auto">
-                    <a href="img/files/ar/231.pdf" class="mr-2">
+                    <a href="img/files/ar/1261.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="ml-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="img/files/ar/1260.pdf" class="video-card">
+            <div class="video-card-image">
+                <img class="img-fluid" src="/assets/images/course-images/communication/12.jpg" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">تصميم وإلقاء العروض التقديمية</p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="img/files/ar/1260.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="ml-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="img/files/ar/1259.pdf" class="video-card">
+            <div class="video-card-image">
+                <img class="img-fluid" src="/assets/images/course-images/communication/13.jpg" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">المهارات المتقدمة في التواصل</p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="img/files/ar/1259.pdf" class="mr-2">
+                        <i class="fas fa-2x fa-download"></i>
+                    </a>
+                    <a href="mailto:training@arabian-institute.com" class="ml-2">
+                        <i class="fas fa-2x fa-envelope-open"></i>
+                    </a>
+                </div>
+            </div>
+        </a>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <a href="img/files/ar/1258.pdf" class="video-card">
+            <div class="video-card-image">
+                <img class="img-fluid" src="/assets/images/course-images/communication/14.jpg" alt="">
+            </div>
+            <div class="video-card-body video-card-body--inner">
+                <div class="video-title">
+                    <p class="text-dark font-bold text-center">التواصل على مستوى المؤسسة والإدارات</p>
+                </div>
+                <div class="d-flex justify-content-between mt-auto">
+                    <a href="img/files/ar/1258.pdf" class="mr-2">
                         <i class="fas fa-2x fa-download"></i>
                     </a>
                     <a href="mailto:training@arabian-institute.com" class="ml-2">
